2007-06-26  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoff.

        Update tests for http://bugs.webkit.org/show_bug.cgi?id=14111
        Autogenerate Event JS binding

        * fast/dom/prototype-chain-expected.txt: DOMEventPrototype is no longer
        in the prototype chain.
        * fast/dom/xmlhttprequest-get-expected.txt:

2007-06-26  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by John.
        
        <rdar://problem/5290534> Crash RenderTextControl::calcHeight() after deleting text in a search field

        Demonstrates the bug:
        * editing/deleting/5290534-expected.txt: Added.
        * editing/deleting/5290534.html: Added.

        Fixed a bug (an extra br was inserted) and removed a FIXME:
        * editing/deleting/4845371-expected.checksum:
        * editing/deleting/4845371-expected.png:
        * editing/deleting/4845371-expected.txt:
        * editing/deleting/4845371.html:
        
        Removed an unrendered br that was being incorrectly inserted:
        * editing/deleting/5126166-expected.txt:

2007-06-25  Sam Weinig  <sam@webkit.org>

        Reviewed by Maciej.

        Test for http://bugs.webkit.org/show_bug.cgi?id=11315
        Mutating document.constructor.prototype mutates Object.prototype

        * fast/js/constructor-expected.txt: Added.
        * fast/js/constructor.html: Added.
        * fast/js/resources/constructor.js: Added.

2007-06-25  Adele Peterson  <adele@apple.com>

        Reviewed by Hyatt.

        Test for: <rdar://problem/5286410> Scrollbar and resize corner for overflow area is not hidden with style "visibility: hidden;"
        http://bugs.webkit.org/show_bug.cgi?id=14297

        * fast/overflow/hidden-scrollbar-resize-expected.checksum: Added.
        * fast/overflow/hidden-scrollbar-resize-expected.png: Added.
        * fast/overflow/hidden-scrollbar-resize-expected.txt: Added.
        * fast/overflow/hidden-scrollbar-resize.html: Added.
